feature : drawer 메뉴, 로그아웃 메뉴 추가
1. drawer 맴 타입 변경 기능 추가
2. 로그아웃 기능 추가

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -13,6 +13,14 @@
     
     "login" : {        
         "not_registered_yet" : "Not registered yet?",
-        "Create_an_account" : "Create an account"
-    }
+        "Create_an_account" : "Create an account"        
+    },
+    "drawer" :{
+        "map_type" : "map type"
+    },
+    "maptype" : {
+        "satellite" : "satellite",
+        "terrain" : "terrain"
+    },
+    "logout" : "logout"
 }
